# Disk-ANN-Evaluation

./: .gitmodules  README.md
AiSAQ/: AISAQ_USAGE.md  run_aisaq.sh
AiSAQ/apps/: build_disk_index.cpp  search_disk_index.cpp
AiSAQ/include/: defaults.h  percentile_stats.h  utils.h
AiSAQ/src/: aisaq_pq_reader.cpp  pq_flash_index.cpp
DGAI/: .gitignore  CMakeLists.txt  README.md  README_run.md
DGAI/include/: aux_utils.h  global_stats.h  linux_aligned_file_reader.h  parameters.h  partition_and_pq.h  percentile_stats.h  pq_table.h  query_buf.h  ssd_index.h  utils.h
DGAI/scripts/: config.sh  config_dataset.sh  preprocess.sh  profile_build.sh  run_exp1.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh  run_search.sh
DGAI/src/: global_stats.cpp  index.cpp  ssd_index.cpp
DGAI/tests/: CMakeLists.txt  build_memory_index.cpp  check_reorder_topo.cpp  gt_update.cpp  mixed_workload.cpp  overall_performance.cpp  reorder_by_map.cpp  reorder_topo.cpp  search_disk_index.cpp  shuffle.cpp  shuffle2.cpp  split_index.cpp
FreshDiskANN/: CMakeLists.txt  SLIDING_WINDOW_TEST.md  prepare_and_test_disk_sliding_window.sh
FreshDiskANN/include/: aligned_file_reader.h  aux_utils.h  cosine_similarity.h  distance.h  exceptions.h  index.h  memory_mapper.h  parameters.h  percentile_stats.h  pq_flash_index.h  pq_table.h  shard.h  sync_index.h  timer.h  utils.h
FreshDiskANN/src/: aux_utils.cpp  index.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition_and_pq.cpp  pq_flash_index.cpp  shard.cpp  sync_index.cpp  windows_aligned_file_reader.cpp
FreshDiskANN/tests/: CMakeLists.txt  lazy_reinsert_batch.cpp  merge_in_mem.cpp  search_disk_index.cpp  search_memory_index.cpp  search_memory_index_with_recall.cpp  static_sync_index.cpp  sync_del_insert_cycles.cpp  test_concurr_insert_search.cpp  test_concurr_merge_insert.cpp  test_delete_insert_cycles.cpp  test_index_merger_steady_state.cpp  test_merge_insert.cpp  test_nsg_incr_index.cpp  test_sliding_window.cpp  test_sync_index.cpp  test_sync_index_batch.cpp
Gorgeous/: CMakeLists.txt
Gorgeous/graph_partition/: CMakeLists.txt
Gorgeous/include/: aux_utils.h  baseline_io_stats.h  deco_index.h  dynamic_cache_search.h  hybridcache_cache.h  hybridcache_search.h  percentile_stats.h  pq_flash_index.h  pq_table.h  utils.h
Gorgeous/scripts/: GUIDE.md  config_clustering.sh  config_dataset.sh  config_local.sh  generate_cache_list.py  run_benchmark.sh
Gorgeous/src/: CMakeLists.txt  aux_utils.cpp
Gorgeous/tests/: CMakeLists.txt  search_disk_index.cpp  test_baseline_io_stats.cpp  test_dynamic_cache_search.cpp  test_hybridcache_search.cpp
Gorgeous/tests/utils/: create_fbin.py  index_relayout.cpp  index_relayout_free_mem.cpp
PageANN/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md
PageANN/apps/: CMakeLists.txt  build_vamana_disk_index.cpp  generate_page_graph.cpp  recommend_vamana_graph_degree.cpp  search_disk_index.cpp
PageANN/apps/utils/: CMakeLists.txt  compute_groundtruth.cpp  generate_hash_buckets.cpp  generate_reorder_pq.cpp
PageANN/include/: abstract_graph_store.h  aligned_file_reader.h  cached_io.h  defaults.h  disk_utils.h  filter_utils.h  in_mem_graph_store.h  index.h  index_factory.h  linux_aligned_file_reader.h  neighbor.h  ooc_in_mem_data_store.h  ooc_in_mem_graph_store.h  percentile_stats.h  pq.h  pq_flash_index.h  scratch.h  utils.h  windows_aligned_file_reader.h
PageANN/src/: CMakeLists.txt  disk_utils.cpp  in_mem_data_store.cpp  in_mem_graph_store.cpp  index.cpp  index_factory.cpp  linux_aligned_file_reader.cpp  (+9 more)
(+75 files in other folders)
